# haskell-quaternion

./: Data-Quaternion-Approx.html  Data-Quaternion.html  LICENSE  README  doc-index.html  haskell-quaternion.cabal  haskell-quaternion.haddock  index-frames.html  index.html  mini_Data-Quaternion-Approx.html  mini_Data-Quaternion.html
Data/: Quaternion.hs
Data/Quaternion/: Approx.hs
